# voice-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEFAULT_CONFIG_UPDATE.md  DEPLOYMENT.md  Dockerfile  ELEVENLABS_DEFAULT.md  ELEVENLABS_ERROR_FIX.md  ELEVENLABS_SETUP_COMPLETE.md  ELEVENLABS_STREAMING_OPTIMIZATION.md  INTEGRATION_COMPLETE.md  OPTIMIZATION_COMPLETE.md  PRODUCTION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  TTS_SETUP.md  demo_tts.py  deploy.sh  diagnose.sh  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.sh  test_openai_llm.py  test_websocket.py
docs/: Technical Documentation.md
src/: __init__.py  audio_pipeline.py  audio_streaming.py  cli.py  config.py  elevenlabs_tts_client.py  gemini_client.py  memory.py  openai_llm_client.py  openai_tts_client.py  persona.py  server.py  stt_client.py  tts_client.py  voice_converter.py  websocket_manager.py  websocket_protocol.py
static/: index.html
tests/: __init__.py  test_audio_pipeline.py  test_audio_streaming.py  test_cli.py  test_config.py  test_gemini_client.py  test_memory.py  test_persona.py  test_stt_client.py  test_tts_client.py  test_voice_converter.py  test_websocket_manager.py  test_websocket_protocol.py
